--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@mikefarrow/prettier",
-  "version": "3.6.2",
+  "version": "3.6.2-1",
   "dependencies": {
     "@ianvs/prettier-plugin-sort-imports": "^4.7.0",
     "prettier": "3.6.2"
